# mcc

./: .editorconfig  Cargo.toml  Secrets-example.toml  rustfmt.toml
.github/workflows/: ci.yml
src/: commands.rs  lib.rs
