[package]
name = "shuttle"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
anyhow = "1.0.62"
axum = "0.6.4"
hyper = "0.14.24"
poise = "0.5.2"
serde = "1.0"
serde-xml-rs = "0.6.0"
shuttle-secrets = "0.11.0"
shuttle-service = { version = "0.11.0"}
sync_wrapper = "0.1.2"
tokio = "1.22.0"
futures = "0.3.26"
reqwest="0.11.14"